fix: avoid bleeding of font-weight (#4734)
A couple of components are expected to be used inside a bold context. By
setting font-weight: normal, we avoid displaying it in bold.

--- a/src/elements/form-field/form-field/form-field.scss
+++ b/src/elements/form-field/form-field/form-field.scss
@@ -35,6 +35,7 @@
 
   display: inline-block;
   color: var(--sbb-form-field-color);
+  font-weight: normal;
 }
 
 :host(:where(:not([width='collapse']))) {
